DuPont DevSB/src/objects/Validation_Score__c.object
<CustomObject>
    <fields>
        <fullName>Mobile_requirements__c</fullName>
        <description>Are there mobile requirements?</description>
        <inlineHelpText>Are there mobile requirements?</inlineHelpText>
        <label>Mobile requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Yes</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_sourced_Reports_and_Dashboards__c</fullName>
        <description>Multi-sourced Reports and Dashboards</description>
        <inlineHelpText>Multi-sourced Reports and Dashboards</inlineHelpText>
        <label>Multi-sourced Reports and Dashboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Custom Reports, multi underlying DB sources</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Data included in Custom Reports is stored within SFDC DB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navigational_Requirements__c</fullName>
        <inlineHelpText>Describe the UI navigation requirements in terms of the following
1 - All Custom Navigation (Many Wizards, All Custom Buttons and Links)
3 - Some Custom Navigation (A few buttons, but mostly standard)
5 - Standard Salesforce (All Standard)</inlineHelpText>
        <label>Navigational Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - All Custom Navigation Components</fullName>
                </value>
                <value>
                    <fullName>2 -</fullName>
                </value>
                <value>
                    <fullName>3 - Some Custom, Some Standard Salesforce Navigation</fullName>
                </value>
                <value>
                    <fullName>4 -</fullName>
                </value>
                <value>
                    <fullName>5 - Standard Salesforce Navigation Components</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_external_users__c</fullName>
        <description>What is the number of external users?</description>
        <inlineHelpText>What is the number of external users?</inlineHelpText>
        <label>Number of external users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - (5000+)</fullName>
                </value>
                <value>
                    <fullName>1 - (1000-5000)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - (500-800)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - (0)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_internal_users__c</fullName>
        <description>What is the number of internal users?</description>
        <inlineHelpText>What is the number of internal users?</inlineHelpText>
        <label>Number of internal users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - (5000+)</fullName>
                </value>
                <value>
                    <fullName>1-(1000-5000)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-(500-800)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-(less than 300)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offline_Requirements__c</fullName>
        <label>Offline Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1- Yes</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5- No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Packaged_or_custom__c</fullName>
        <description>Is the existing application packaged or custom?</description>
        <inlineHelpText>Is the existing application packaged or custom?</inlineHelpText>
        <label>Packaged or custom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Pkg robust soln</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Pkg with bus. need separate from soln</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Processing_Time_Requirements__c</fullName>
        <label>Page Processing Time Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - All HTTPS Pages (No caching available)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3- Some HTTP, Some HTTPS</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5- All HTTP Pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <description>Performance</description>
        <inlineHelpText>Performance</inlineHelpText>
        <label>Performance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Very Good</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Average</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_Fit_Indicator__c</fullName>
        <label>Pilot Fit Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_Fit__c</fullName>
        <formula>IMAGE
(IF(  ISPICKVAL(Pilot_Fit_Indicator__c,&quot;Red&quot;), &quot;servlet/servlet.FileDownload?file= 01530000000raJN&quot;,
IF (ISPICKVAL(Pilot_Fit_Indicator__c,&quot;Yellow&quot;), &quot;servlet/servlet.FileDownload?file= 01530000000raJT&quot;,
IF (ISPICKVAL(Pilot_Fit_Indicator__c,&quot;Green&quot;), &quot;servlet/servlet.FileDownload?file= 01530000000raJS&quot;,
&quot;servlet/servlet.FileDownload?file= 01530000000raJX&quot;)))
,&quot;Fit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pilot Fit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Site_Download_Requirements__c</fullName>
        <label>Public Site Download Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0- Many video, audio, binary files stored on SFDC</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - Video, audio, binary files not stored in SFDC</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5- No video, audio, binary file downloads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_time_Transaction_Volumes_Millions__c</fullName>
        <description>Does the application require sustained throughput of over 100Mbps (certain multimedia and gaming applications may have this requirement)</description>
        <inlineHelpText>Does the application require sustained throughput of over 100Mbps (certain multimedia and gaming applications may have this requirement)</inlineHelpText>
        <label>Min Throughput &gt;100Mbps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_time_Transaction_Volumes_Score__c</fullName>
        <label>Real-time Transaction Volumes Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regulatory_Limitations_Score__c</fullName>
        <label>Regulatory Limitations Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regulatory_Limitations__c</fullName>
        <description>Can your information be stored in a centralized (multi-tenant) database environment?</description>
        <inlineHelpText>Do regulatory restrictions limit storage of this application&apos;s data off-premise?</inlineHelpText>
        <label>Regulatory Limitations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Unstructured Data Requirements</description>
        <inlineHelpText>Unstructured Data Requirements - Non-relational data, usually text heavy</inlineHelpText>
        <label>Unstructured Data Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Full Knowledge base</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Attachments to Structured Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Cleansing__c</fullName>
        <description>Requires Cleansing</description>
        <inlineHelpText>Requires Cleansing</inlineHelpText>
        <label>Requires Cleansing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Fuzzy logic required to cleanse/merge data</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Cleanse criteria is based upon key data</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-No cleanse required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Time_Score__c</fullName>
        <label>Response Time Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Does the application require response times under 250ms? (typically this is only the case when integrating to sensors or devices, as opposed to end-user interactions)</description>
        <inlineHelpText>Does the application require response times under 250ms? (typically this is only the case when integrating to sensors or devices, as opposed to end-user interactions)</inlineHelpText>
        <label>Max Response Time &lt;250ms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Content_Management_Requirements__c</fullName>
        <inlineHelpText>Describe the Content Management Requirements for the applicaiton</inlineHelpText>
        <label>Site Content Management Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Robust Content Management Capabilities (i.e. Interwoven, Vignette)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - Minor Content Management Capabilities (i.e. Templates, Approvals)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5- None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Candidate_Indicator__c</fullName>
        <formula>IF((Calculated_Pilot_Score2__c*100) &gt; 80, &quot;Strong&quot;, 
IF(AND((Calculated_Pilot_Score2__c *100) &gt; 70, Calculated_Pilot_Score2__c &lt;= 80), &quot;Good&quot;, 
IF(AND((Calculated_Pilot_Score2__c*100) &gt; 50, Calculated_Pilot_Score2__c &lt;= 70), &quot;Good&quot;, 
IF(AND((Calculated_Pilot_Score2__c *100)&gt; 20, Calculated_Pilot_Score2__c &lt;= 50), &quot;Good&quot; , 
IF(AND((Calculated_Pilot_Score2__c *100)&gt; 0, Calculated_Pilot_Score2__c &lt;= 20), &quot;Questionable&quot; , 
IF((Calculated_Pilot_Score2__c*100) == 0, &quot;N/A&quot;, 
null 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Candidate Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Candidate__c</fullName>
        <formula>IMAGE( 
If ((Calculated_Pilot_Score2__c * 100) &gt; 80, &quot;servlet/servlet.FileDownload?file=01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 75, (Calculated_Pilot_Score2__c*100) &lt;= 80), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 50, (Calculated_Pilot_Score2__c *100) &lt;= 75), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 20, (Calculated_Pilot_Score2__c * 100) &lt;= 50), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF((Calculated_Pilot_Score2__c*100) &lt;= 20, &quot;servlet/servlet.FileDownload?file= 01530000000raJT&quot;,&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;))))), 
&quot;Fit&quot; 
) &amp; &quot; (&quot;&amp;  Strategic_Candidate_Indicator__c  &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Apps that are of: 
Medim to High Complexity 
Medium to High Usage 
Current User Perception is Poor to Average</inlineHelpText>
        <label>Strategic Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structured_Data_Storage_Magnitude__c</fullName>
        <description>Order of Magnitude for Structured Data Stored</description>
        <inlineHelpText>Order of Magnitude for Structured Data Stored - Typically relational data stored in an RDBMS</inlineHelpText>
        <label>Structured Data Storage Magnitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Multi millions for multiple objects</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Tens/Hundreds of Thousands</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Tens of thousands or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synchronous_Reporting_on_Large_Results__c</fullName>
        <description>Synchronous Reporting on Large Result Sets</description>
        <inlineHelpText>Synchronous Reporting on Large Result Sets - Requires higher data throughput</inlineHelpText>
        <label>Synchronous Reporting on Large Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Many Reports, requires tens of thousands of record to be returned</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Few Reports, requires tens of thousands records to be returned</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-All Reports will be under 2K records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_documentation_availability__c</fullName>
        <description>Is the system documentation available (Requirements, Design, Specs)?</description>
        <inlineHelpText>Is the system documentation available (Requirements, Design, Specs)?</inlineHelpText>
        <label>System documentation availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-No documentation available</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Some documentation available</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Documentation available and current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tolerate_Maintenance_Windows_Score__c</fullName>
        <label>Tolerate Maintenance Windows Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tolerate_Maintenance_Windows__c</fullName>
        <description>Is the application unable to tolerate scheduled maintenance downtime?</description>
        <inlineHelpText>Is the application unable to tolerate scheduled maintenance downtime?</inlineHelpText>
        <label>Intolerant of Maintenance Windows</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tools_for_integration_architecture__c</fullName>
        <description>Tools for integration architecture</description>
        <inlineHelpText>Tools for integration architecture</inlineHelpText>
        <label>Tools for integration architecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-None</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Middleware with no SFDC Adaptor</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Middleware with SFDC Adaptor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Existing Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unauthenticated_Access_Requirements__c</fullName>
        <inlineHelpText>Describe the access requirements (i.e public vs. private site)</inlineHelpText>
        <label>Unauthenticated Access Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - All Unauthenticated Access (Public Site)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - Some Unauthenticated, Some Authenticated Access</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - All Authenticated Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Risk__c</fullName>
        <formula>IMAGE( 
If ((Calculated_Risk_Usage_Score__c  *100) &gt; 80, &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND(( Calculated_Risk_Usage_Score__c  *100) &gt; 75, (Calculated_Risk_Usage_Score__c  *100) &lt;= 80), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND(( Calculated_Risk_Usage_Score__c  *100) &gt; 40, (Calculated_Risk_Usage_Score__c  *100) &lt;= 75), &quot;servlet/servlet.FileDownload?file= 01580000001Neqo&quot;, 
IF(AND(( Calculated_Risk_Usage_Score__c *100 ) &gt; 20, (Calculated_Risk_Usage_Score__c  *100) &lt;= 40), &quot;servlet/servlet.FileDownload?file= 01580000001Neqn&quot;, 
IF(( Calculated_Risk_Usage_Score__c  *100) &lt;= 20, &quot;servlet/servlet.FileDownload?file= 01530000000raJN&quot;,&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;))))), 
&quot;Fit&quot; 
) &amp; &quot; (&quot;&amp; Calculated_Usage_Indicator__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage (Risk)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Satisfaction__c</fullName>
        <description>User Satisfaction</description>
        <inlineHelpText>User Satisfaction</inlineHelpText>
        <label>User Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>authentication_requirements__c</fullName>
        <description>What are the system’s authentication requirements?</description>
        <inlineHelpText>What are the system’s authentication requirements?</inlineHelpText>
        <label>Authentication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Single-sign on (SSO)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-SSO using SAML (1.1, 2.0)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Username/Password only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Business_Processes__c</fullName>
        <description>The number of business processes supported by the application.</description>
        <inlineHelpText>The number of business processes supported by the application.</inlineHelpText>
        <label># of Business Processes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0- (8+)</fullName>
                </value>
                <value>
                    <fullName>1- (5-8)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3- (3-4)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5- (1-2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Custom_Fields__c</fullName>
        <description>What is the # of Custom Fields?</description>
        <inlineHelpText>What is the # of Custom Fields?</inlineHelpText>
        <label># of Custom Fields</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Complex (200 or more per single object)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Medium (100-200 per object)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Simple (&lt;50 per object)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Custom_Objects_Tabs__c</fullName>
        <description>What is the # of Custom Objects/Tabs?</description>
        <inlineHelpText>What is the # of Custom Objects/Tabs?</inlineHelpText>
        <label># of Custom Objects/Tabs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Complex (300 or more per single object)</fullName>
                </value>
                <value>
                    <fullName>2-(20-25)</fullName>
                </value>
                <value>
                    <fullName>3-Medium (15-20)</fullName>
                </value>
                <value>
                    <fullName>4-(10-15)</fullName>
                </value>
                <value>
                    <fullName>5-Simple (10 or less)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Custom_Pages__c</fullName>
        <inlineHelpText>The estimated number of custom pages required</inlineHelpText>
        <label># of Custom Pages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - (50+)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - ( 20 - 40 )</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - (None)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Data_Migration_Sources__c</fullName>
        <label># of Data Migration Sources</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - (10+)</fullName>
                </value>
                <value>
                    <fullName>1- (5-10)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-  (1-3)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - 0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Departments__c</fullName>
        <description>How many departments leverage solution?</description>
        <inlineHelpText>How many departments leverage solution?</inlineHelpText>
        <label># of Departments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-(5+)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-(3-5)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-(1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Physical_Locations__c</fullName>
        <description>How many physical locations are the users based in?</description>
        <inlineHelpText>How many physical locations are the users based in?</inlineHelpText>
        <label># of Physical Locations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Many, International</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Several, Single Country</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>